--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@
 body{
     display: flex;
     flex-direction: column;
+    
 }
 
 .play{
@@ -29,4 +30,9 @@ body{
 
 .result{
     padding:25px
+}
+
+.resultcontainer{
+    display: flex;
+    justify-content: center;
 }
